objects/Heat_Stress_Survey_2__c.object
<CustomObject>
    <fields>
        <fullName>Awareness_public_health_Impact__c</fullName>
        <label>HS_v2.0.24</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brain_Impact_exposed_summer_heat__c</fullName>
        <label>HS_v2.0.22</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brain_health_Impact__c</fullName>
        <label>HS_v2.0.25</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Heats_2_0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>During_summer_heat_related_issues__c</fullName>
        <label>HS_v2.0.17</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>During_summer_physical_activity__c</fullName>
        <label>HS_v2.0.6</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>During_summer_reason_outside_for_exercis__c</fullName>
        <label>HS_v2.0.5</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>During_summer_reason_outside_for_leisure__c</fullName>
        <label>HS_v2.0.4</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>During_summer_reason_outside_for_work__c</fullName>
        <label>HS_v2.0.3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>During_summer_time_spend_out_each_day__c</fullName>
        <label>HS_v2.0.2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Feeling_overheated_symptoms__c</fullName>
        <label>HS_v2.0.19</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heat_Related_Emergency__c</fullName>
        <label>HS_v2.0.16</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heat_stress_Increase_coming_decade__c</fullName>
        <label>HS_v2.0.28</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heat_stress_medical_condition__c</fullName>
        <label>HS_v2.0.8</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heat_stress_personal_affect__c</fullName>
        <label>HS_v2.0.12</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heat_stress_training__c</fullName>
        <label>HS_v2.0.10</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_heat_risk_factors__c</fullName>
        <label>HS_v2.0.18</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_serious_health_concern__c</fullName>
        <label>HS_v2.0.11</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Important_factors_to_consider__c</fullName>
        <label>HS_v2.0.21</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Learn_more_about_heat_stress__c</fullName>
        <label>HS_v2.0.27</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measures_to_prevent_heat_stress__c</fullName>
        <label>HS_v2.0.20</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outside_job_2_hours__c</fullName>
        <label>HS_v2.0.7</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_health_guidelines__c</fullName>
        <label>HS_v2.0.9</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Symptoms_associated__c</fullName>
        <label>HS_v2.0.15</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Taking_preventative_steps__c</fullName>
        <label>HS_v2.0.26</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vulnerable_populations_effect__c</fullName>
        <label>HS_v2.0.23</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_zipcode_live_during_majority_summer__c</fullName>
        <label>HS_v2.0.1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_outside_breaks_permitted__c</fullName>
        <label>HS_v2.0.14</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_outside_employee_volunteer__c</fullName>
        <label>HS_v2.0.13</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>HEAT_2.0</label>
    <nameField>
        <displayFormat>HS2.0-{0000000000}</displayFormat>
        <label>Heat Stress Name 2.0</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HEATs_2.0</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>